--- a/Bosco.sty
+++ b/Bosco.sty
@@ -1,40 +1,49 @@
 % Graphics and colour
 %
 
-
-\usepackage{minted} % load the minted package
-\usepackage{tcolorbox} % load the tcolorbox package (which loads the fancyvrb package)
-
-% set up the minted package
-% \usemintedstyle{borland} % set the code highlighting style
-\setminted{fontsize=\small} % set the code font size
-
 \usepackage{graphicx}
-\usepackage{subfig}
-\usepackage{float}
+\graphicspath{{diagrams/}}
+\usepackage{xcolor}
 \usepackage{tcolorbox}
-\usepackage{parskip}
-\usepackage{microtype}
-\usepackage{fvextra}
+
+% Page setup
+%
+
 \usepackage[margin=2cm]{geometry}
 \usepackage{fancyhdr}
-\usepackage{xcolor}
-\usepackage{caption}
+\pagestyle{fancy}
+\fancyhead{}
+\fancyfoot{}
+\renewcommand{\headrulewidth}{0.4pt}
+\setlength{\headheight}{15pt}
+
+\usepackage{parskip}
+\usepackage[bottom]{footmisc}
+
+% Fonts
+%
+
+\usepackage{lmodern}
+\usepackage{amssymb}
+\usepackage{pifont}
+\newcommand{\xmark}{\ding{55}}
+\usepackage{relsize}
+\usepackage{minted}
+
+\usepackage[margin=10pt,font=small,labelfont=bf,labelsep=endash]{caption}
+\usemintedstyle{borland} % set the code highlighting style
+\setminted{fontsize=\small} % set the code font size
+
+
+\usepackage{microtype}
+\usepackage{fvextra}
+
+
 \let\cleardoublepage\clearpage
 
 
 \graphicspath{{diagrams/}}
 
-
-\definecolor{myOrange}{RGB}{241,85,44}
-\definecolor{myGray}{RGB}{106,100,100}
-
-% Page setup
-%
-
-\pagestyle{fancy}
-\fancyhead{}
-\fancyfoot{}
 \renewcommand{\headrulewidth}{0.4pt}
 \setlength{\headheight}{15pt}
 
@@ -51,10 +60,7 @@
 \usepackage{lmodern}
 \usepackage{amssymb}
 \usepackage{pifont}
-\newcommand{\xmark}{\ding{55}}
 \usepackage{relsize}
-
-\usepackage[margin=10pt,font=small,labelfont=bf,labelsep=endash]{caption}
 
 
 % Sectioning
@@ -62,36 +68,13 @@
 
 \usepackage{titlesec}
 
-\usepackage[Sonny]{fncychap}
-\ChNameVar{\Large\sf\color{myOrange}}
-\ChNumVar{\Huge}
-\ChTitleVar{\Large\sf\color{myOrange}}
-\ChRuleWidth{0.5pt}
-\ChNameUpperCase
-
-\renewcommand\section{\@startsection {section}{1}{\z@}%
-    {-3.5ex \@plus -0.1ex \@minus -.2ex}%
-    {1.2ex \@plus.01ex}%
-    {\sffamily\Large\bfseries\color{myOrange}}}
-\renewcommand\subsection{\@startsection{subsection}{2}{\z@}%
-    {-3.25ex\@plus -0.1ex \@minus -.2ex}%
-    {1.2ex \@plus .01ex}%
-    {\sffamily\large\bfseries\color{myOrange}}}
-\renewcommand\subsubsection{\@startsection{subsubsection}{3}{\z@}%
-    {-3.25ex\@plus -0.1ex \@minus -.2ex}%
-    {0.2ex \@plus .01ex}%
-    {\MakeUppercase\small\bfseries\color{myOrange}}}
-\renewcommand\paragraph{\@startsection{paragraph}{4}{\z@}%
-    {-3.25ex\@plus -0.1ex \@minus -.2ex}%
-    {0.2ex \@plus .01ex}%
-    {\MakeUppercase\small\bfseries\color{myOrange}}}\makeatother
-
 \usepackage{titlesec}
 \setcounter{tocdepth}{5}
 \setcounter{secnumdepth}{5}
 
 \usepackage[toc,page]{appendix}
 \usepackage{subcaption}
+
 % Tables and foats
 %
 \usepackage{float}
@@ -112,5 +95,4 @@
 \usepackage{cleveref}
 \usepackage[sorting=nyt,backref=true,style=authoryear,citestyle=authoryear]{biblatex}
 \urlstyle{same}
-%
-\addbibresource{references.bib}
+\addbibresource{bibliography.bib}
