--- a/Bosco.sty
+++ b/Bosco.sty
@@ -54,14 +54,6 @@
 
 \usepackage[bottom]{footmisc}
 
-% Fonts
-%
-
-\usepackage{lmodern}
-\usepackage{amssymb}
-\usepackage{pifont}
-\usepackage{relsize}
-
 
 % Sectioning
 %
@@ -90,9 +82,8 @@
 
 % Referencing
 %
-
 \usepackage[colorlinks=true, linkcolor=blue, filecolor=magenta, urlcolor=blue]{hyperref}
 \usepackage{cleveref}
-\usepackage[sorting=nyt,backref=true,style=authoryear,citestyle=authoryear]{biblatex}
+\usepackage[sorting=nyt,backref=true,style=numeric]{biblatex}
 \urlstyle{same}
 \addbibresource{bibliography.bib}
