--- a/bibliography.bib
+++ b/bibliography.bib
@@ -7,9 +7,25 @@
 }
 
 @online{Hansen,
-  author = {Hansen},
+  author = {Jordan Hansen},
   title = {Puppeteer on AWS Lambda},
   year = {2021},
   url = {https://oxylabs.io/blog/puppeteer-on-aws-lambda},
   urldate = {2022-11-04}
+}
+
+@online{Halley,
+  author = {Evan Halley},
+  title = {Retrieving AWS SSM Parameters with Node},
+  year = {2021},
+  url = {https://evanhalley.dev/post/aws-ssm-node},
+  urldate = {2023-02-12}
+}
+
+@online{Puppeteer,
+  author = {npm},
+  title = {Puppeteer},
+  year = {2023},
+  available = {https://www.npmjs.com/package/puppeteer},
+  accessed = {2023-03-02}
 }
