--- a/bibliography.bib
+++ b/bibliography.bib
@@ -29,3 +29,11 @@
   available = {https://www.npmjs.com/package/puppeteer},
   accessed = {2023-03-02}
 }
+
+@online{Mocha,
+  author = {Mochajs.org},
+  title = {Mocha - the fun, simple, flexible JavaScript test framework},
+  year = {2019},
+  available = {https://mochajs.org/},
+  accessed = {2023-01-16}
+}
